@@ -14,6 +14,9 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.Objects;
+import java.util.Optional;
+import org.apache.commons.lang3.StringUtils;
 
 /**
  * 会话事件中枢：把「事件生产」与「HTTP 连接」解耦。
@@ -69,13 +72,13 @@ public class SessionStreamHub {
     }
 
     private static String key(String sessionId) {
-        return sessionId == null || sessionId.isBlank() ? "default" : sessionId.trim();
+        return StringUtils.isBlank(sessionId) ? "default" : sessionId.trim();
     }
 
     /** 是否存在该会话的活动（running）通道。 */
     public boolean hasActiveChannel(String sessionId) {
         Channel ch = channels.get(key(sessionId));
-        return ch != null && ch.status == Status.running;
+        return Objects.nonNull(ch) && ch.status == Status.running;
     }
 
     /** 开始一个新任务：重置该会话的 Channel（丢弃上一轮缓冲）。 */
@@ -83,7 +86,7 @@ public class SessionStreamHub {
         String k = key(sessionId);
         Channel ch = new Channel();
         ch.sessionId = k;
-        ch.userMessage = userMessage == null ? "" : userMessage;
+        ch.userMessage = Optional.ofNullable(userMessage).orElse("");
         channels.put(k, ch);
     }
 
@@ -93,8 +96,8 @@ public class SessionStreamHub {
      */
     public void publish(String sessionId, String name, Object data) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null) return;
-        String text = data == null ? "" : String.valueOf(data);
+        if (Objects.isNull(ch)) return;
+        String text = Objects.isNull(data) ? "" : String.valueOf(data);
         // 更新累积状态
         switch (name) {
             case "thinking" -> ch.think.append(text);
@@ -110,8 +113,8 @@ public class SessionStreamHub {
     /** 子目标事件（结构化）：缓存最新值并扇出。 */
     public void publishSubGoal(String sessionId, String subText, int done, int total) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null) return;
-        ch.subgoalText = subText == null ? "" : subText;
+        if (Objects.isNull(ch)) return;
+        ch.subgoalText = Optional.ofNullable(subText).orElse("");
         ch.subgoalDone = done;
         ch.subgoalTotal = total;
         fanOut(ch, "subgoal", subgoalPayload(subText, done, total));
@@ -119,7 +122,7 @@ public class SessionStreamHub {
 
     private static Map<String, Object> subgoalPayload(String text, int done, int total) {
         Map<String, Object> m = new LinkedHashMap<>();
-        m.put("text", text == null ? "" : text);
+        m.put("text", Optional.ofNullable(text).orElse(""));
         m.put("done", done);
         m.put("total", total);
         return m;
@@ -135,7 +138,7 @@ public class SessionStreamHub {
 
     private static boolean sendEvent(SseEmitter em, String name, Object data) {
         try {
-            em.send(SseEmitter.event().name(name).data(data == null ? "" : data));
+            em.send(SseEmitter.event().name(name).data(Optional.ofNullable(data).orElse("")));
             return true;
         } catch (Exception e) {
             return false;
@@ -151,18 +154,18 @@ public class SessionStreamHub {
      */
     public boolean attach(String sessionId, SseEmitter emitter) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null) {
+        if (Objects.isNull(ch)) {
             return false;  // 无活动通道：任务早已结束且缓冲被驱逐
         }
         // —— 重放累积状态 ——
-        sendEvent(emitter, "session", ch.sessionId == null ? "" : ch.sessionId);
-        if (ch.userMessage != null && !ch.userMessage.isEmpty()) {
+        sendEvent(emitter, "session", Optional.ofNullable(ch.sessionId).orElse(""));
+        if (Objects.nonNull(ch.userMessage) && !ch.userMessage.isEmpty()) {
             sendEvent(emitter, "user", ch.userMessage);
         }
         if (ch.think.length() > 0) {
             sendEvent(emitter, "thinking", ch.think.toString());
         }
-        if (ch.progress != null && !ch.progress.isEmpty()) {
+        if (Objects.nonNull(ch.progress) && !ch.progress.isEmpty()) {
             sendEvent(emitter, "progress", ch.progress);
         }
         if (ch.subgoalTotal > 0) {
@@ -174,10 +177,10 @@ public class SessionStreamHub {
 
         // —— 已结束：补发收尾并关闭；未结束：加入实时集合 ——
         if (ch.status == Status.done) {
-            sendEvent(emitter, "end", ch.finalAnswer == null ? "" : ch.finalAnswer);
+            sendEvent(emitter, "end", Optional.ofNullable(ch.finalAnswer).orElse(""));
             try { emitter.complete(); } catch (Exception ignored) {}
         } else if (ch.status == Status.error) {
-            sendEvent(emitter, "error", ch.errorMsg == null ? "处理出错" : ch.errorMsg);
+            sendEvent(emitter, "error", Optional.ofNullable(ch.errorMsg).orElse("处理出错"));
             try { emitter.complete(); } catch (Exception ignored) {}
         } else {
             emitter.onCompletion(() -> ch.emitters.remove(emitter));
@@ -191,8 +194,8 @@ public class SessionStreamHub {
     /** 任务正常结束：缓存权威全文，发 end，断开所有订阅者，标记 TTL。 */
     public void complete(String sessionId, String finalAnswer) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null) return;
-        ch.finalAnswer = finalAnswer == null ? "" : finalAnswer;
+        if (Objects.isNull(ch)) return;
+        ch.finalAnswer = Optional.ofNullable(finalAnswer).orElse("");
         ch.status = Status.done;
         ch.doneAt = System.currentTimeMillis();
         for (SseEmitter em : ch.emitters) {
@@ -205,8 +208,8 @@ public class SessionStreamHub {
     /** 任务异常结束。 */
     public void error(String sessionId, String message) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null) return;
-        ch.errorMsg = message == null ? "处理出错" : message;
+        if (Objects.isNull(ch)) return;
+        ch.errorMsg = Optional.ofNullable(message).orElse("处理出错");
         ch.status = Status.error;
         ch.doneAt = System.currentTimeMillis();
         for (SseEmitter em : ch.emitters) {
@@ -219,7 +222,7 @@ public class SessionStreamHub {
     /** 用户在执行中追加消息：入队并通知前端已收到。 */
     public boolean injectMessage(String sessionId, String message) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null || ch.status != Status.running) return false;
+        if (Objects.isNull(ch) || ch.status != Status.running) return false;
         ch.pendingUserMessages.offer(message);
         fanOut(ch, "inject_ack", message.length() > 50 ? message.substring(0, 50) + "..." : message);
         log.info("用户追加消息入队: sessionId={}, length={}", sessionId, message.length());
@@ -229,10 +232,10 @@ public class SessionStreamHub {
     /** AgentLoop 每轮迭代开头调用：取出所有待处理消息（线程安全）。 */
     public List<String> drainMessages(String sessionId) {
         Channel ch = channels.get(key(sessionId));
-        if (ch == null) return List.of();
+        if (Objects.isNull(ch)) return List.of();
         List<String> result = new ArrayList<>();
         String msg;
-        while ((msg = ch.pendingUserMessages.poll()) != null) {
+        while (Objects.nonNull((msg = ch.pendingUserMessages.poll()))) {
             result.add(msg);
         }
         return result;
