@@ -1,5 +1,7 @@
 package com.miniagent.agent.intent;
 
+import org.springframework.beans.factory.annotation.Autowired;
+
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import dev.langchain4j.data.message.AiMessage;
@@ -17,6 +19,9 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
+import java.util.Objects;
+import java.util.Optional;
+import org.apache.commons.lang3.StringUtils;
 
 /**
  * L1：可配独立小模型做多轮意图 JSON 分类。端点与 prompt 来自 {@link IntentProperties}。
@@ -42,12 +47,12 @@ public class LlmIntentClassifier {
             4. 寒暄/能力询问→QUESTION
             """;
 
-    private final IntentProperties props;
+    @Autowired
+
+    private IntentProperties props;
     private volatile ChatModel dedicatedModel;
 
-    public LlmIntentClassifier(IntentProperties props) {
-        this.props = props;
-    }
+    
 
     @PostConstruct
     void initDedicatedModel() {
@@ -79,18 +84,18 @@ public class LlmIntentClassifier {
     }
 
     public boolean hasDedicatedModel() {
-        return dedicatedModel != null;
+        return Objects.nonNull(dedicatedModel);
     }
 
     public Classification classify(String userMessage, boolean hasImage, List<ChatMessage> recentHistory) {
-        if (!isEnabled() || dedicatedModel == null) return null;
+        if (!isEnabled() || Objects.isNull(dedicatedModel)) return null;
         String system = blank(props.getClassifierSystemPrompt()) ? DEFAULT_SYSTEM : props.getClassifierSystemPrompt();
         try {
             ChatResponse resp = dedicatedModel.chat(UserMessage.from(system + "\n\n" + buildPrompt(userMessage, hasImage, recentHistory)));
-            String text = resp == null || resp.aiMessage() == null || resp.aiMessage().text() == null
+            String text = Objects.isNull(resp) || Objects.isNull(resp.aiMessage()) || Objects.isNull(resp.aiMessage().text())
                     ? "" : resp.aiMessage().text().trim();
             Classification c = parse(text);
-            if (c == null) {
+            if (Objects.isNull(c)) {
                 log.warn("意图 LLM 返回无法解析: {}", text.length() > 240 ? text.substring(0, 240) + "…" : text);
             }
             return c;
@@ -112,14 +117,14 @@ public class LlmIntentClassifier {
                 【附加】
                 hasImage=%s
                 """.formatted(
-                historyBlock.isBlank() ? "（无）" : historyBlock,
-                userMessage == null ? "" : userMessage,
+                StringUtils.isBlank(historyBlock) ? "（无）" : historyBlock,
+                Optional.ofNullable(userMessage).orElse(""),
                 hasImage
         );
     }
 
     private String formatHistory(List<ChatMessage> recentHistory) {
-        if (recentHistory == null || recentHistory.isEmpty()) return "";
+        if (Objects.isNull(recentHistory) || recentHistory.isEmpty()) return "";
         int maxMsg = Math.max(1, props.getHistoryMaxMessages());
         int maxChars = Math.max(200, props.getHistoryMaxChars());
         int from = Math.max(0, recentHistory.size() - maxMsg);
@@ -134,11 +139,11 @@ public class LlmIntentClassifier {
                 body = um.hasSingleText() ? um.singleText() : String.valueOf(um.contents());
             } else if (m instanceof AiMessage am) {
                 role = "助手";
-                body = am.text() == null ? "" : am.text();
+                body = Objects.isNull(am.text()) ? "" : am.text();
             } else {
                 continue;
             }
-            if (body == null) body = "";
+            if (Objects.isNull(body)) body = "";
             body = body.replace('\r', ' ').replace('\n', ' ').trim();
             if (body.length() > 400) body = body.substring(0, 400) + "…";
             String line = role + ": " + body;
@@ -150,9 +155,9 @@ public class LlmIntentClassifier {
     }
 
     static Classification parse(String raw) {
-        if (raw == null || raw.isBlank()) return null;
+        if (StringUtils.isBlank(raw)) return null;
         String json = extractJsonObject(raw);
-        if (json == null) return null;
+        if (Objects.isNull(json)) return null;
         try {
             JsonNode n = MAPPER.readTree(json);
             String toolProfile = text(n, "toolProfile").toUpperCase(Locale.ROOT);
@@ -177,7 +182,7 @@ public class LlmIntentClassifier {
     }
 
     private static IntentType parseIntent(String raw) {
-        if (raw == null || raw.isBlank()) return IntentType.NEW_TASK;
+        if (StringUtils.isBlank(raw)) return IntentType.NEW_TASK;
         try {
             return IntentType.valueOf(raw.trim().toUpperCase(Locale.ROOT));
         } catch (Exception e) {
@@ -187,16 +192,16 @@ public class LlmIntentClassifier {
 
     private static boolean bool(JsonNode n, String field) {
         JsonNode v = n.get(field);
-        return v != null && v.isBoolean() && v.asBoolean();
+        return Objects.nonNull(v) && v.isBoolean() && v.asBoolean();
     }
 
     private static String text(JsonNode n, String field) {
         JsonNode v = n.get(field);
-        return v == null || v.isNull() ? "" : v.asText("").trim();
+        return Objects.isNull(v) || v.isNull() ? "" : v.asText("").trim();
     }
 
     private static boolean blank(String s) {
-        return s == null || s.isBlank();
+        return StringUtils.isBlank(s);
     }
 
     static String extractJsonObject(String raw) {
