@@ -1,8 +1,12 @@
 package com.miniagent.agent.permission;
 
+import jakarta.annotation.PostConstruct;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -20,8 +24,13 @@ public class SessionPermissionStore {
 
     private final ConcurrentHashMap<String, SessionPerm> bySession = new ConcurrentHashMap<>();
 
+    @PostConstruct
+    void bindToContext() {
+        PermissionContext.bindStore(this);
+    }
+
     public SessionPerm get(String sessionId) {
-        if (sessionId == null || sessionId.isBlank()) {
+        if (StringUtils.isBlank(sessionId)) {
             return new SessionPerm(PermissionMode.DEFAULT, false, ConcurrentHashMap.newKeySet());
         }
         return bySession.computeIfAbsent(sessionId, sid ->
@@ -33,13 +42,13 @@ public class SessionPermissionStore {
     }
 
     public void setMode(String sessionId, PermissionMode mode) {
-        if (sessionId == null || sessionId.isBlank() || mode == null) return;
+        if (StringUtils.isBlank(sessionId) || Objects.isNull(mode)) return;
         bySession.compute(sessionId, (k, old) -> {
-            Set<String> grants = old != null ? old.askGrantedTools() : ConcurrentHashMap.newKeySet();
+            Set<String> grants = Objects.nonNull(old) ? old.askGrantedTools() : ConcurrentHashMap.newKeySet();
             boolean approved = mode == PermissionMode.PLAN
-                    ? (old != null && old.planApproved())
+                    ? (Objects.nonNull(old) && old.planApproved())
                     : true; // 非 plan 视为无需 plan 闸门
-            if (mode == PermissionMode.PLAN && (old == null || old.mode() != PermissionMode.PLAN)) {
+            if (mode == PermissionMode.PLAN && (Objects.isNull(old) || old.mode() != PermissionMode.PLAN)) {
                 approved = false; // 切入 plan 时重置批准
             }
             return new SessionPerm(mode, approved, grants);
@@ -48,10 +57,10 @@ public class SessionPermissionStore {
 
     /** 用户批准 Plan：保持 plan 模式但打开放行写工具；或切回 default */
     public void approvePlan(String sessionId) {
-        if (sessionId == null || sessionId.isBlank()) return;
+        if (StringUtils.isBlank(sessionId)) return;
         bySession.compute(sessionId, (k, old) -> {
-            PermissionMode mode = old != null ? old.mode() : PermissionMode.PLAN;
-            Set<String> grants = old != null ? old.askGrantedTools() : ConcurrentHashMap.newKeySet();
+            PermissionMode mode = Objects.nonNull(old) ? old.mode() : PermissionMode.PLAN;
+            Set<String> grants = Objects.nonNull(old) ? old.askGrantedTools() : ConcurrentHashMap.newKeySet();
             if (mode != PermissionMode.PLAN) mode = PermissionMode.DEFAULT;
             return new SessionPerm(mode, true, grants);
         });
@@ -64,13 +73,13 @@ public class SessionPermissionStore {
     }
 
     public void grantAskTool(String sessionId, String toolName) {
-        if (sessionId == null || toolName == null || toolName.isBlank()) return;
+        if (Objects.isNull(sessionId) || StringUtils.isBlank(toolName)) return;
         SessionPerm p = get(sessionId);
         p.askGrantedTools().add(toolName.trim());
     }
 
     public boolean isAskGranted(String sessionId, String toolName) {
-        if (toolName == null) return false;
+        if (Objects.isNull(toolName)) return false;
         return get(sessionId).askGrantedTools().contains(toolName);
     }
 
@@ -78,7 +87,7 @@ public class SessionPermissionStore {
         SessionPerm p = get(sessionId);
         return Map.of(
                 "success", true,
-                "sessionId", sessionId == null ? "" : sessionId,
+                "sessionId", Optional.ofNullable(sessionId).orElse(""),
                 "mode", p.mode().wireName(),
                 "label", p.mode().labelZh(),
                 "planApproved", p.planApproved(),
@@ -88,6 +97,6 @@ public class SessionPermissionStore {
     }
 
     public void clear(String sessionId) {
-        if (sessionId != null) bySession.remove(sessionId);
+        if (Objects.nonNull(sessionId)) bySession.remove(sessionId);
     }
 }
