@@ -1,10 +1,11 @@
 package com.miniagent.config.service;
 
+import org.springframework.beans.factory.annotation.Autowired;
+
 import com.miniagent.config.entity.UserModelConfig;
 import com.miniagent.config.model.AgentModelsProperties;
 import com.miniagent.config.model.EffectiveModelSettings;
 import com.miniagent.config.repository.UserModelConfigRepository;
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -13,16 +14,20 @@ import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import org.apache.commons.lang3.StringUtils;
 
 /**
  * 按用户解析 / 持久化聊天模型配置。API 回显永远脱敏。
  */
 @Service
-@RequiredArgsConstructor
 public class UserModelConfigService {
 
-    private final UserModelConfigRepository repository;
-    private final AgentModelsProperties modelsProperties;
+    @Autowired
+    private UserModelConfigRepository repository;
+    @Autowired
+    private AgentModelsProperties modelsProperties;
 
     @Value("${langchain4j.open-ai.chat-model.api-key}")
     private String globalApiKey;
@@ -33,13 +38,13 @@ public class UserModelConfigService {
 
     /** 供对话路径建连 */
     public EffectiveModelSettings getEffective(Long userId) {
-        UserModelConfig row = userId == null ? null : repository.findByUserId(userId).orElse(null);
+        UserModelConfig row = Objects.isNull(userId) ? null : repository.findByUserId(userId).orElse(null);
         return resolve(row);
     }
 
     /** GET /api/model-config 视图（无明文 key） */
     public Map<String, Object> getView(Long userId) {
-        UserModelConfig row = userId == null ? null : repository.findByUserId(userId).orElse(null);
+        UserModelConfig row = Objects.isNull(userId) ? null : repository.findByUserId(userId).orElse(null);
         EffectiveModelSettings eff = resolve(row);
 
         Map<String, Object> current = new LinkedHashMap<>();
@@ -47,22 +52,22 @@ public class UserModelConfigService {
         current.put("label", eff.label());
         current.put("baseUrl", eff.baseUrl());
         current.put("modelName", eff.modelName());
-        current.put("hasApiKey", eff.apiKey() != null && !eff.apiKey().isBlank());
+        current.put("hasApiKey", Objects.nonNull(eff.apiKey()) && StringUtils.isNotBlank(eff.apiKey()));
         current.put("apiKeyMasked", maskKey(eff.apiKey()));
-        current.put("customBaseUrl", row == null ? "" : nullToEmpty(row.getCustomBaseUrl()));
-        current.put("customModelName", row == null ? "" : nullToEmpty(row.getCustomModelName()));
-        current.put("hasCustomApiKey", row != null && row.getCustomApiKey() != null && !row.getCustomApiKey().isBlank());
+        current.put("customBaseUrl", Objects.isNull(row) ? "" : nullToEmpty(row.getCustomBaseUrl()));
+        current.put("customModelName", Objects.isNull(row) ? "" : nullToEmpty(row.getCustomModelName()));
+        current.put("hasCustomApiKey", Objects.nonNull(row) && Objects.nonNull(row.getCustomApiKey()) && StringUtils.isNotBlank(row.getCustomApiKey()));
 
         List<Map<String, Object>> presets = new ArrayList<>();
         for (AgentModelsProperties.Preset p : modelsProperties.getPresets()) {
-            if (p == null || p.getId() == null) continue;
+            if (Objects.isNull(p) || Objects.isNull(p.getId())) continue;
             Map<String, Object> item = new LinkedHashMap<>();
             item.put("id", p.getId());
-            item.put("label", p.getLabel() != null ? p.getLabel() : p.getId());
+            item.put("label", Optional.ofNullable(p.getLabel()).orElse(p.getId()));
             EffectiveModelSettings pe = resolvePresetOnly(p.getId());
             item.put("baseUrl", pe.baseUrl());
             item.put("modelName", pe.modelName());
-            item.put("hasApiKey", pe.apiKey() != null && !pe.apiKey().isBlank());
+            item.put("hasApiKey", Objects.nonNull(pe.apiKey()) && StringUtils.isNotBlank(pe.apiKey()));
             presets.add(item);
         }
 
@@ -80,14 +85,14 @@ public class UserModelConfigService {
      */
     @Transactional
     public Map<String, Object> save(Long userId, String presetId, String baseUrl, String modelName, String apiKey) {
-        if (userId == null) {
+        if (Objects.isNull(userId)) {
             return Map.of("success", false, "message", "Not authenticated");
         }
-        String pid = (presetId == null || presetId.isBlank())
+        String pid = (StringUtils.isBlank(presetId))
                 ? modelsProperties.getDefaultPreset() : presetId.trim();
-        if (modelsProperties.findPreset(pid) == null && !"default".equals(pid)) {
+        if (Objects.isNull(modelsProperties.findPreset(pid)) && !"default".equals(pid)) {
             // 允许未知 id 仅当等于 default；否则回退 default
-            if (modelsProperties.findPreset(modelsProperties.getDefaultPreset()) != null) {
+            if (Objects.nonNull(modelsProperties.findPreset(modelsProperties.getDefaultPreset()))) {
                 pid = modelsProperties.getDefaultPreset();
             }
         }
@@ -101,7 +106,7 @@ public class UserModelConfigService {
         row.setCustomBaseUrl(blankToNull(baseUrl));
         row.setCustomModelName(blankToNull(modelName));
 
-        if (apiKey != null) {
+        if (Objects.nonNull(apiKey)) {
             String trimmed = apiKey.trim();
             if ("__CLEAR__".equals(trimmed)) {
                 row.setCustomApiKey(null);
@@ -117,7 +122,7 @@ public class UserModelConfigService {
 
     @Transactional
     public Map<String, Object> resetToDefault(Long userId) {
-        if (userId == null) {
+        if (Objects.isNull(userId)) {
             return Map.of("success", false, "message", "Not authenticated");
         }
         repository.findByUserId(userId).ifPresent(repository::delete);
@@ -125,7 +130,7 @@ public class UserModelConfigService {
     }
 
     EffectiveModelSettings resolve(UserModelConfig row) {
-        String presetId = row != null && row.getPresetId() != null && !row.getPresetId().isBlank()
+        String presetId = Objects.nonNull(row) && StringUtils.isNotBlank(row.getPresetId())
                 ? row.getPresetId()
                 : modelsProperties.getDefaultPreset();
         EffectiveModelSettings base = resolvePresetOnly(presetId);
@@ -135,7 +140,7 @@ public class UserModelConfigService {
         String apiKey = base.apiKey();
         String label = base.label();
 
-        if (row != null) {
+        if (Objects.nonNull(row)) {
             if (notBlank(row.getCustomBaseUrl())) baseUrl = row.getCustomBaseUrl().trim();
             if (notBlank(row.getCustomModelName())) modelName = row.getCustomModelName().trim();
             if (notBlank(row.getCustomApiKey())) apiKey = row.getCustomApiKey().trim();
@@ -144,38 +149,38 @@ public class UserModelConfigService {
     }
 
     EffectiveModelSettings resolvePresetOnly(String presetId) {
-        String pid = presetId == null || presetId.isBlank()
+        String pid = StringUtils.isBlank(presetId)
                 ? modelsProperties.getDefaultPreset() : presetId;
         AgentModelsProperties.Preset p = modelsProperties.findPreset(pid);
-        String label = p != null && p.getLabel() != null ? p.getLabel() : pid;
-        String baseUrl = firstNonBlank(p != null ? p.getBaseUrl() : null, globalBaseUrl);
-        String modelName = firstNonBlank(p != null ? p.getModelName() : null, globalModelName);
-        String apiKey = firstNonBlank(p != null ? p.getApiKey() : null, globalApiKey);
+        String label = Objects.nonNull(p) ? Optional.ofNullable(p.getLabel()).orElse(pid) : pid;
+        String baseUrl = firstNonBlank(Objects.nonNull(p) ? p.getBaseUrl() : null, globalBaseUrl);
+        String modelName = firstNonBlank(Objects.nonNull(p) ? p.getModelName() : null, globalModelName);
+        String apiKey = firstNonBlank(Objects.nonNull(p) ? p.getApiKey() : null, globalApiKey);
         return new EffectiveModelSettings(pid, label, baseUrl, modelName, apiKey);
     }
 
     static String maskKey(String key) {
-        if (key == null || key.isBlank()) return "";
+        if (StringUtils.isBlank(key)) return "";
         String k = key.trim();
         if (k.length() <= 4) return "***";
         return "***" + k.substring(k.length() - 4);
     }
 
     private static boolean notBlank(String s) {
-        return s != null && !s.isBlank();
+        return StringUtils.isNotBlank(s);
     }
 
     private static String blankToNull(String s) {
-        if (s == null || s.isBlank()) return null;
+        if (StringUtils.isBlank(s)) return null;
         return s.trim();
     }
 
     private static String nullToEmpty(String s) {
-        return s == null ? "" : s;
+        return Optional.ofNullable(s).orElse("");
     }
 
     private static String firstNonBlank(String a, String b) {
-        if (a != null && !a.isBlank()) return a.trim();
-        return b == null ? "" : b.trim();
+        if (StringUtils.isNotBlank(a)) return a.trim();
+        return Objects.isNull(b) ? "" : b.trim();
     }
 }
